# rmuxinator

./: .gitignore  Bar.toml  Cargo.toml  Example.toml  Foo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
samples/: CustomBin.toml  CustomLayout.toml  CustomTerminalMultiplexer.toml  CustomTmuxConf.toml  CustomTmuxOptions.toml  Minimal.toml  wtf.toml
src/: lib.rs  main.rs
tests/: cli.rs
