[package]
name = "rmuxinator"
version = "0.1.0"
authors = ["Peter Doherty <pdoherty@protonmail.com>"]
edition = "2018"
description = "tmux project configuration CLI utility"

[dependencies]
clap = "2.33"
toml = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
tempfile = "3"
