[package]
name = "rmuxinator"
version = "2.0.0"
authors = ["Peter Doherty <pdoherty@protonmail.com>"]
edition = "2018"
description = "tmux project configuration utility"
license = "MIT"
repository = "https://github.com/ethagnawl/rmuxinator"
keywords = ["tmux", "productivity"]

[dependencies]
clap = "2.33"
mockall = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
tempfile = "3"
